--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
-  </head>
-  <body>
-    <h1>This is About Page</h1>
-    <p>Check out my <a href="/">Home</a> page.</p>
-  </body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+About
+{% endblock %}
+
+{% block content %}
+<h1>This is About Page</h1>
+<p>Check out my <a href="/">Home</a> page.</p>
+{% endblock %}
