--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>This is Home Page</h1>
-    <p>Check out my <a href="/about">About</a> page.</p>
-  </body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+Home
+{% endblock %}
+
+{% block content %}
+<h1>This is Home Page</h1>
+<p>Check out my <a href="/about">About</a> page.</p>
+{% endblock %}
