--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ body {
 
 nav {
   padding: 1rem;
-  background-color: #44b78b;
+  background-color: #44B78B;
   color: white;
   font-size: 2.5rem;
 }
@@ -42,5 +42,11 @@ a {
 }
 
 a:hover {
-  opacity: 0.85;
+  opacity: .85;
+}
+
+.banner {
+  display: block;
+  width: 100%;
+  max-width: 800px;
 }
